--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div>
+  <div id="content">
     Bluetooth
 
     A Bluetooth (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.
