--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
 <body>
   <div id="content">
-    Bluetooth
+    <h1>Bluetooth</h1>
 
     A Bluetooth (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.
 
-    Név eredete (kék fog)
+    <h2>év eredete (kék fog)</h2>
 
     A név Harald Blatand (I. Harald dán király) dán király nevének angol változata, aki 958-tól, illetve 976-tól 986-ig volt Dánia és Norvégia uralkodója, és nagyon szerette az áfonyát, ezért kék lett a foga. Harald arról volt nevezetes, hogy egyesítette a lázongó dán, norvég és svéd törzseket. Ehhez hasonlóan a Bluetooth-t is arra szánták, hogy egyesítsen és összekössön olyan különböző eszközöket, mint a számítógép, a mobiltelefon, vagy a fejhallgató. A Bluetooth logója a H és B betűknek megfelelő skandináv rúnákat, a <i>Haglazt</i> és a <i>Berkanant</i> idézi.
 
-    Alkalmazása
+    <h2>Alkalmazása</h2>
 
     Vezetéknélküli hálózatok kialakítására asztali és hordozható számítógépek között, illetve csak asztali gépek között kis területen, ha nincs szükség sávszélességre
     Számítógép-perifériák csatlakoztatására nyomtatók, billentyűzetek, egerek esetében
@@ -35,7 +35,7 @@
     Autóskészletek és fülhallgatók csatlakoztatására mobiltelefonokhoz
     Orvosi és GPS-készülékek
 
-    Hatótávolsága
+   <h2>Hatótávolsága</h2>
 
     A Bluetooth alacsony energiafogyasztása miatt különösen alkalmas hordozható eszközök számára. A készülékek osztályuktól függően az alábbi távolságon belül képesek kommunikálni:
 
