--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <div id="content">
+    <img src="BluetoothLogo.svg" alt="Bluetooth" title="Bluetooth">
     <h1>Bluetooth</h1>
 
     A Bluetooth (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.
